--- a/Openmanus Ui Voice.html
+++ b/Openmanus Ui Voice.html
@@ -1,3 +1,14 @@
-<!-- Agent Grid UI with Donna centered -->
 <!DOCTYPE html>
-<html>...</html>
+<html lang='en'>
+<head>
+<meta charset='UTF-8'>
+<meta name='viewport' content='width=device-width, initial-scale=1.0'>
+<title>AgentMob V3</title>
+<link rel='stylesheet' href='styles.css'>
+</head>
+<body>
+<h1>Welcome to AgentMob V3</h1>
+<div id='agentGrid'></div>
+<script src='script.js'></script>
+</body>
+</html>
